# ai-trading-agent

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
agent/: __init__.py  config.py  main.py
agent/analysis/: claude_analyzer.py
agent/api/: main.py
agent/data/: historical_events.py  market.py  news.py
agent/signals/: generator.py
agent/swarm/: agents.py  engine.py
frontend/: index.html
