[project]
name = "ai-trading-agent"
version = "0.1.0"
description = "AI-powered trading signal agent using MiroFish swarm intelligence + Claude for market analysis"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "yfinance>=0.2.40",
    "feedparser>=6.0.11",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "ta>=0.11.0",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "aiosqlite>=0.20.0",
    "jinja2>=3.1.0",
]

[tool.setuptools.packages.find]
include = ["agent*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
